--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">VAD android</string>
+    <string name="noise"> Noise</string>
+    <string name="speech"> Human Voice </string>
 </resources>
